# async_python

./: .gitignore  pyproject.toml  server.py
book_collector/: ASGI_Uvicorn.md
book_collector/app/: book_scraper.py  config.py  exam.py  jinja_template_exam.py  main.py
book_collector/app/templates/: index.html  item.html
book_collector/models/: __init__.py  book.py
images/: 1657164930805  gray-cat-holding-onto-a-ledge-picture-id153743108  photo-1624294404981-ab7465760a94  photo-1629286797837-9a7767896d7f
src/: async.py  config.py  cpu_basic.py  cpu_multi_threading.py  io_bound_network.py  io_coroutine.py  prac_async.py  scraping.py  scraping_2.py  sync.py
