[tool.poetry]
name = "cch-async-python"
version = "0.1.0"
description = "practice async python with fastapi"
authors = ["cch0807 <ckdgus11021@gmail.com>"]
readme = "README.md"
packages = [{include = "cch_async_python"}]

[tool.poetry.dependencies]
python = "^3.8"
black = "^22.10.0"
requests = "^2.28.1"
flake8 = "^5.0.4"
aiohttp = "^3.8.3"
beautifulsoup4 = "^4.11.1"
aiofiles = "^22.1.0"
fastapi = "^0.85.1"
uvicorn = "^0.18.3"
Jinja2 = "^3.1.2"
odmantic = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
